# ARC_Macro

./: .env.example  .gitignore  ARCHITECTURE_SOTA.md  ARC_MACRO_RISK_OS_v2.3_AUDIT_REPORT.md  ARC_MACRO_RISK_OS_v2.3_COMPARISON_REPORT.md  ChartsSection.tsx  DIAGNOSTIC_2026-06.md  PLAN_COMPOSITE_EQUILIBRIUM_RATE.md  README.md  RETRAINING_PLAN.md  SOP_MACRO_RISK_OS.md  db.ts  ecosystem.config.cjs  insert_model_run.mjs  insert_model_run_cjs.cjs  macro_risk_os_v2.py  marketDataService.test.ts  marketDataService.ts  notes_feature_selection_visible.txt  notes_screenshot.txt  notes_screenshot_v41.txt  package.json  playwright.config.ts  pnpm-lock.yaml  portfolioRouter.ts  pyproject.toml  run_model.py  test_pipeline.mjs  todo.md  tsconfig.json  vitest.config.ts
arc/: __init__.py  contracts.py  repro.py
client/: index.html
deploy/: .env.production.template  deploy.sh  nginx.conf
docs/: ARC_Macro_2.0_Operational_Tutorial.md  ARC_Macro_Guia_Operacional_Completo.md  CAUSAL_IMPACT_2026-06.md  FORWARD_TARGET_2026-06.md  GPU_SETUP.md  LEAK_FIXES_AND_GATE_2026-06.md  PHASE3_2_ASOF_SPINE_2026-06.md  PHASE3_3_FEATURE_PIT_PROOF_2026-06.md  PHASE3_ASOF_GATE_2026-06.md  PHASE4_2_CARRYHARD_AND_MOMENTUM_2026-06.md  PHASE4_3_MOMENTUM_SLEEVE_2026-06.md  PHASE4_4_NOWCAST_EDGE_2026-06.md  PHASE4_5_BATCH_HARD_CONNECTORS_2026-06.md  PHASE4_5_PB_RETEST_POSITIONING_2026-06.md  PHASE4_EDGE_SEARCH_2026-06.md  PHASE5B_FORWARD_SIZING_RSTAR_2026-06.md  PHASE5_INTELLIGENCE_2026-06.md  PHASE6_PORTFOLIO_RISK_2026-06.md  PHASE7_2_SCORING_RUNBOOK_2026-06.md  PHASE7_3_AUTONOMOUS_ACCRUAL_2026-06.md  (+13 more)
(+368 files in other folders)
